# Automation-Module

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE.md  README.md  go.sh
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/components/canvas/: NodeCanvas.jsx  NodeDrawer.jsx  NodeTypes.jsx
frontend/src/components/modals/: SaveWorkflowModal.jsx  SystemAccessModal.jsx
frontend/src/components/panels/: NavRail.jsx  PropertiesPanel.jsx  SchemaViewer.jsx  TerminalLog.jsx
frontend/src/context/: AuthContext.jsx  ThemeContext.jsx  WorkflowContext.jsx
frontend/src/services/: api.js
include/core/: BaseTask.hpp  Parser.hpp  SecurityUtils.hpp  ShellTask.hpp  VariableManager.hpp  Worker.hpp
sequences/: test.json
shared/: workflow_schema.json
src/: ShellTask.cpp  main  main.cpp
src/core/: BaseTask.cpp  Parser.cpp  SecurityUtils.cpp  VariableManager.cpp  Worker.cpp
